force-app/main/default/objects/Opportunity/fields/Account_Completed_DD__c.field-meta.xml
<CustomField>
    <fullName>Account_Completed_DD__c</fullName>
    <formula>Account.DD_Completed_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Completed DD</label>
    <type>Date</type>
</CustomField>