force-app/main/default/objects/Opportunity/fields/Additional_Info_Abbr__c.field-meta.xml
<CustomField>
    <fullName>Additional_Info_Abbr__c</fullName>
    <inlineHelpText>Is there other material info relating to the commercial proposal? Please provide abbreviated notes here.</inlineHelpText>
    <label>Additional Info (Abbr.)</label>
    <type>TextArea</type>
</CustomField>