force-app/main/default/objects/Opportunity/fields/Advance_Rebate_Payment__c.field-meta.xml
<CustomField>
    <fullName>Advance_Rebate_Payment__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Up front payment of rebate to be clawed back.</inlineHelpText>
    <label>Volume Incentive</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>