force-app/main/default/objects/Opportunity/fields/API_Delivery_Category_Name__c.field-meta.xml
<CustomField>
    <fullName>API_Delivery_Category_Name__c</fullName>
    <label>API Delivery Category Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>