force-app/main/default/objects/Opportunity/fields/API_Delivery_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>API_Delivery_Completed_Date__c</fullName>
    <label>API Delivery Completed Date</label>
    <type>Date</type>
</CustomField>