force-app/main/default/objects/Opportunity/fields/API_Integration_Guide__c.field-meta.xml
<CustomField>
    <fullName>API_Integration_Guide__c</fullName>
    <label>API Integration Guide</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>