force-app/main/default/objects/Opportunity/fields/API_Security_Questionnaire__c.field-meta.xml
<CustomField>
    <fullName>API_Security_Questionnaire__c</fullName>
    <label>API Security Questionnaire</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>