force-app/main/default/objects/Opportunity/fields/API_Security_Questionnaire_Complete_Date__c.field-meta.xml
<CustomField>
    <fullName>API_Security_Questionnaire_Complete_Date__c</fullName>
    <inlineHelpText>This is a Date field equivalent to the historical field &quot;API Security Questionnaire&quot;.
This is automatically populated when the relevent delivery ticket&#39;s &quot;API_Security_Questionnaire_Completed__c&quot; field is entered</inlineHelpText>
    <label>API Security Questionnaire Complete Date</label>
    <type>Date</type>
</CustomField>