force-app/main/default/objects/Opportunity/fields/April_15__c.field-meta.xml
<CustomField>
    <fullName>April_15__c</fullName>
    <label>April 15</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>