force-app/main/default/objects/Opportunity/fields/Attainable_TTV_annual__c.field-meta.xml
<CustomField>
    <fullName>Attainable_TTV_annual__c</fullName>
    <formula>attainable_ttv_monthly__c * 12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attainable GDV (annual)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>