force-app/main/default/objects/Opportunity/fields/attainable_ttv_monthly__c.field-meta.xml
<CustomField>
    <fullName>attainable_ttv_monthly__c</fullName>
    <label>Attainable GDV (monthly)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>