force-app/main/default/objects/Opportunity/fields/ATTV_Month_1__c.field-meta.xml
<CustomField>
    <fullName>ATTV_Month_1__c</fullName>
    <defaultValue>0.10</defaultValue>
    <label>% GDV - Month 1</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>