force-app/main/default/objects/Opportunity/fields/ATTV_Month_2__c.field-meta.xml
<CustomField>
    <fullName>ATTV_Month_2__c</fullName>
    <defaultValue>0.20</defaultValue>
    <label>% GDV - Month 2</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>