force-app/main/default/objects/Opportunity/fields/ATTV_Month_2Value__c.field-meta.xml
<CustomField>
    <fullName>ATTV_Month_2Value__c</fullName>
    <formula>attainable_ttv_monthly__c * ATTV_Month_2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>$ GDV - Month 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>