force-app/main/default/objects/Opportunity/fields/ATTV_Month_3__c.field-meta.xml
<CustomField>
    <fullName>ATTV_Month_3__c</fullName>
    <defaultValue>0.40</defaultValue>
    <label>% GDV - Month 3</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>