force-app/main/default/objects/Opportunity/fields/August_14__c.field-meta.xml
<CustomField>
    <fullName>August_14__c</fullName>
    <label>August 14</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>