force-app/main/default/objects/Opportunity/fields/August_15__c.field-meta.xml
<CustomField>
    <fullName>August_15__c</fullName>
    <label>August 15</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>