force-app/main/default/objects/Opportunity/fields/Background__c.field-meta.xml
<CustomField>
    <fullName>Background__c</fullName>
    <inlineHelpText>Please enter background to the deal. Example : Customer currently using WEX and other VCC providers, therefore require strong commercial proposition to win volume and exclusivity. Key issue we need to solve for is winning BSP volumes.</inlineHelpText>
    <label>Background</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>