force-app/main/default/objects/Opportunity/fields/Commercial_Play__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Play__c</fullName>
    <inlineHelpText>What is the commercial segment (as per segmentation model)?</inlineHelpText>
    <label>Commercial Segment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Capture</fullName>
            </value>
            <value>
                <fullName>Dislodge</fullName>
            </value>
            <value>
                <fullName>Expand</fullName>
            </value>
            <value>
                <fullName>Hold (NCA)</fullName>
            </value>
            <value>
                <fullName>Hold (SOW)</fullName>
            </value>
            <value>
                <fullName>Lock</fullName>
            </value>
            <value>
                <fullName>VAN Virgin</fullName>
            </value>
            <value>
                <fullName>Capture (Lite)</fullName>
            </value>
            <value>
                <fullName>Dislodge (Lite)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>