force-app/main/default/objects/Opportunity/fields/Compare_Annual_GDV__c.field-meta.xml
<CustomField>
    <fullName>Compare_Annual_GDV__c</fullName>
    <formula>IF( BLANKVALUE(SOM_Estimated_Annual_GDV__c, 0 )  =   BLANKVALUE(Attainable_TTV_annual__c,  0 ) , &quot;true&quot;, &quot;false&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Compare Annual GDV</label>
    <type>Text</type>
</CustomField>