force-app/main/default/objects/Opportunity/fields/Compare_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Compare_Completion_Date__c</fullName>
    <formula>IF( BLANKVALUE(SOM_Estimated_Completion__c, TODAY() )  =   BLANKVALUE(Estimated_Completion_Date__c,  TODAY() ) ,  &quot;true&quot;, &quot;false&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Compare Completion Date</label>
    <type>Text</type>
</CustomField>