force-app/main/default/objects/Opportunity/fields/Completed_Attainable_GDV__c.field-meta.xml
<CustomField>
    <fullName>Completed_Attainable_GDV__c</fullName>
    <label>Completed Attainable GDV</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>