force-app/main/default/objects/Opportunity/fields/Config_Guide__c.field-meta.xml
<CustomField>
    <fullName>Config_Guide__c</fullName>
    <label>Config Guide</label>
    <type>TextArea</type>
</CustomField>