force-app/main/default/objects/Opportunity/fields/Confirmation_of_client_transaction__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_of_client_transaction__c</fullName>
    <formula>Account.First_Transaction_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Confirmation of Client Transaction</label>
    <type>Date</type>
</CustomField>