force-app/main/default/objects/Opportunity/fields/Contract_Affiliate_Name__c.field-meta.xml
<CustomField>
    <fullName>Contract_Affiliate_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract Affiliate Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contract Affiliate Entity</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>