force-app/main/default/objects/Opportunity/fields/Contract_Term__c.field-meta.xml
<CustomField>
    <fullName>Contract_Term__c</fullName>
    <inlineHelpText>What is the proposed contract term?</inlineHelpText>
    <label>Contract Term</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>3 Years</fullName>
            </value>
            <value>
                <fullName>5 Years</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>