force-app/main/default/objects/Opportunity/fields/Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>Contract_Type__c</fullName>
    <label>Contract Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standard T&amp;Cs</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
            <value>
                <fullName>Contract not required</fullName>
            </value>
            <value>
                <fullName>Affiliate</fullName>
            </value>
            <value>
                <fullName>Additional ECN</fullName>
            </value>
            <value>
                <fullName>Referrer</fullName>
            </value>
            <value>
                <fullName>Channel Agreement</fullName>
            </value>
            <value>
                <fullName>Service Provider</fullName>
            </value>
            <value>
                <fullName>Internal Transacting</fullName>
            </value>
            <value>
                <fullName>Undefined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>