force-app/main/default/objects/Opportunity/fields/Current_Activity__c.field-meta.xml
<CustomField>
    <fullName>Current_Activity__c</fullName>
    <label>Current Activity</label>
    <type>TextArea</type>
</CustomField>