force-app/main/default/objects/Opportunity/fields/Current_Dormant_Reason__c.field-meta.xml
<CustomField>
    <fullName>Current_Dormant_Reason__c</fullName>
    <label>Current Dormant Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>