force-app/main/default/objects/Opportunity/fields/Current_Dormant_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_Dormant_Start_Date__c</fullName>
    <label>Current Dormant Start Date</label>
    <type>Date</type>
</CustomField>