force-app/main/default/objects/Opportunity/fields/Daily_cash_position_report_ftp__c.field-meta.xml
<CustomField>
    <fullName>Daily_cash_position_report_ftp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Daily cash position report (FTP)</label>
    <type>Checkbox</type>
</CustomField>