force-app/main/default/objects/Opportunity/fields/DD_Completed_Checkpoint__c.field-meta.xml
<CustomField>
    <fullName>DD_Completed_Checkpoint__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Opportunity updated or inserted - If DD Completed Checkpoint is False and Account Due Diligence completed not Null, sets the following fields on Opportunity -  DD Completed Checkpoint, Due Diligence Completed and Stage Name - 3. Contractedd on Oppotunity</inlineHelpText>
    <label>DD Completed Checkpoint</label>
    <type>Checkbox</type>
</CustomField>