force-app/main/default/objects/Opportunity/fields/December_14__c.field-meta.xml
<CustomField>
    <fullName>December_14__c</fullName>
    <label>December 14</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>