force-app/main/default/objects/Opportunity/fields/December_15__c.field-meta.xml
<CustomField>
    <fullName>December_15__c</fullName>
    <label>December 15</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>