force-app/main/default/objects/Opportunity/fields/Delivery_Category_Benchmark_Days__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Category_Benchmark_Days__c</fullName>
    <label>Delivery Category Benchmark Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>