force-app/main/default/objects/Opportunity/fields/Delivery_Category_Name__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Category_Name__c</fullName>
    <label>Delivery Category Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>