force-app/main/default/objects/Opportunity/fields/Delivery_Fields_Completed_Task_Created__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Fields_Completed_Task_Created__c</fullName>
    <inlineHelpText>This is the date when the Delivery Fields Completed Task was created.</inlineHelpText>
    <label>Delivery Fields Completed Task Created</label>
    <type>Date</type>
</CustomField>