force-app/main/default/objects/Opportunity/fields/Delivery_Implementation_Kick_off__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Implementation_Kick_off__c</fullName>
    <label>Delivery Implementation Kick-off</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>