force-app/main/default/objects/Opportunity/fields/Delivery_Issued_Year_to_Date_Amount__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Issued_Year_to_Date_Amount__c</fullName>
    <label>Delivery Issued Year-to-Date Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>