force-app/main/default/objects/Opportunity/fields/Delivery_LIVE_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Delivery_LIVE_Configuration__c</fullName>
    <label>Delivery LIVE Configuration</label>
    <type>TextArea</type>
</CustomField>