force-app/main/default/objects/Opportunity/fields/Delivery_NDA_signed__c.field-meta.xml
<CustomField>
    <fullName>Delivery_NDA_signed__c</fullName>
    <label>Delivery NDA signed</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>