force-app/main/default/objects/Opportunity/fields/Delivery_NDA_Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>Delivery_NDA_Signed_Date__c</fullName>
    <inlineHelpText>This is a Date field, automatically updated from the relevant Delivery ticket record&#39;s &quot;Enter NDA Developer License Signed Date&quot; field</inlineHelpText>
    <label>Delivery NDA Signed Date</label>
    <type>Date</type>
</CustomField>