force-app/main/default/objects/Opportunity/fields/Delivery_Owner__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delivery Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>