force-app/main/default/objects/Opportunity/fields/Delivery_Owner_List_View_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Owner_List_View_Identifier__c</fullName>
    <formula>IF( Delivery_Owner__c = $User.Id, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivery Owner List View Identifier</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>