force-app/main/default/objects/Opportunity/fields/Delivery_Phase__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Phase__c</fullName>
    <label>Delivery Phase</label>
    <length>100</length>
    <type>Text</type>
</CustomField>