force-app/main/default/objects/Opportunity/fields/Delivery_Pre_Kick_off_Questionnaire__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Pre_Kick_off_Questionnaire__c</fullName>
    <label>Delivery Pre Kick-off Questionnaire</label>
    <type>TextArea</type>
</CustomField>