force-app/main/default/objects/Opportunity/fields/Delivery_Pre_Kickoff_Quest_Complete_Date__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Pre_Kickoff_Quest_Complete_Date__c</fullName>
    <inlineHelpText>This is a Date field equivalent to the historical field &quot;Delivery Pre Kick off Questionnaire&quot;.
This is automatically populated when the relevent delivery ticket&#39;s &quot;Enter Pre Kick-off Quest Completed Date&quot; field is entered by the delivery personnel</inlineHelpText>
    <label>Delivery Pre Kickoff Quest Complete Date</label>
    <type>Date</type>
</CustomField>