force-app/main/default/objects/Opportunity/fields/Delivery_Report_Subscriptions__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Report_Subscriptions__c</fullName>
    <label>Delivery Report Subscriptions</label>
    <type>TextArea</type>
</CustomField>