force-app/main/default/objects/Opportunity/fields/Delivery_Status_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Status_Indicator__c</fullName>
    <formula>IMAGE(CASE(  Delivery_Status__c ,
&quot;Active&quot;, &quot;/servlet/servlet.FileDownload?file=01590000007PwfY&quot;,
&quot;Dormant&quot;, &quot;/servlet/servlet.FileDownload?file=01590000007PwfT&quot;,
&quot;Terminate&quot;, &quot;/servlet/servlet.FileDownload?file=01590000007Pweu&quot;,
&quot;Completed&quot;,&quot;/servlet/servlet.FileDownload?file=01590000007PgbK&quot;,
&quot;Closed/Lost Delivery&quot;, &quot;/servlet/servlet.FileDownload?file=01590000007Pweu&quot;,
&quot;&quot;
),&quot;&quot;,20,40)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivery Status Indicator</label>
    <type>Text</type>
</CustomField>