force-app/main/default/objects/Opportunity/fields/Delivery_Ticket_Number__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Ticket_Number__c</fullName>
    <label>Delivery Ticket Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>