force-app/main/default/objects/Opportunity/fields/Delivery_type__c.field-meta.xml
<CustomField>
    <fullName>Delivery_type__c</fullName>
    <label>Delivery Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Delivery - Desktop</fullName>
            </value>
            <value>
                <fullName>Delivery - API</fullName>
            </value>
            <value>
                <fullName>Delivery Not Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>