force-app/main/default/objects/Opportunity/fields/Delivery_VAN_Setting_Quest_Complete_Date__c.field-meta.xml
<CustomField>
    <fullName>Delivery_VAN_Setting_Quest_Complete_Date__c</fullName>
    <inlineHelpText>This is a Date field equivalent to the historical field &quot;Delivery VAN Settings Questionnaire&quot; and auto-populated when the relevent delivery ticket&#39;s &quot;VANS Setting Questionnaire Completed&quot; field is filled in by completion of VANS Setting Questionnaire task</inlineHelpText>
    <label>Delivery VAN Setting Quest Complete Date</label>
    <type>Date</type>
</CustomField>