force-app/main/default/objects/Opportunity/fields/Delivery_VAN_Settings_Questionnaire__c.field-meta.xml
<CustomField>
    <fullName>Delivery_VAN_Settings_Questionnaire__c</fullName>
    <label>Delivery VAN Settings Questionnaire</label>
    <type>TextArea</type>
</CustomField>