force-app/main/default/objects/Opportunity/fields/Delivery_Week__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Week__c</fullName>
    <formula>IF( ISNULL(Estimated_Completion_Date__c), 0, IF(DAY( Estimated_Completion_Date__c ) &gt;21, 4, IF(DAY( Estimated_Completion_Date__c ) &gt;14, 3, IF(DAY( Estimated_Completion_Date__c ) &gt;7, 2, 1))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivery Week</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>