force-app/main/default/objects/Opportunity/fields/Delta_Dormant__c.field-meta.xml
<CustomField>
    <fullName>Delta_Dormant__c</fullName>
    <formula>AND(Year(Dormant_End_Date__c)=Year(Today()), 
Month(Dormant_End_Date__c)=Month(Today()) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delta Dormant</label>
    <type>Checkbox</type>
</CustomField>