force-app/main/default/objects/Opportunity/fields/Delta_Est_Comp_Date__c.field-meta.xml
<CustomField>
    <fullName>Delta_Est_Comp_Date__c</fullName>
    <formula>AND(Year( Est_Change_Date__c )=Year(Today()), 
Month(Est_Change_Date__c)=Month(Today()) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delta Est Comp Date</label>
    <type>Checkbox</type>
</CustomField>