force-app/main/default/objects/Opportunity/fields/Delta_GDV__c.field-meta.xml
<CustomField>
    <fullName>Delta_GDV__c</fullName>
    <formula>AND(Year( Est_Change_Date__c )=Year(Today()), 
Month(Est_Change_Date__c)=Month(Today()) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delta GDV</label>
    <type>Checkbox</type>
</CustomField>